# telegram-cli

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: tg-refresh.cron
examples/systemd/: tg-refresh.service  tg-refresh.timer
src/tg_cli/: __init__.py  analyzer.py  audit.py  client.py  config.py  console.py  db.py  ratelimit.py
src/tg_cli/cli/: _chat.py  _output.py  _sync.py  data.py  main.py  query.py  tg.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_db.py
