[project]
name = "tg-cli"
version = "0.2.0"
description = "Telegram CLI — monitor chats, search messages, AI analysis"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.36",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
all = ["tg-cli[ai]"]

[project.scripts]
tg = "tg_cli.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/tg_cli"]
